postss and scss, css modules

--- a/src/shared/components/App/globals.scss
+++ b/src/shared/components/App/globals.scss
@@ -1,6 +1,8 @@
+$fontFamily: 'Arial', sans-serif;
+
 html {
   box-sizing: border-box;
-  font-family: Arial, sans-serif;
+  font-family: $fontFamily;
 }
 
 *,
