--- a/src/shared/styles/globals.scss
+++ b/src/shared/styles/globals.scss
@@ -1,6 +1,13 @@
 @import './colors';
 
-$fontFamily: 'Arial', sans-serif;
+@font-face {
+  font-family: 'delicious';
+  src: url('../../../public/fonts/delicious_roman.otf');
+  font-weight: normal;
+  font-style: normal
+}
+
+$fontFamily: delicious, sans-serif;
 
 * {
   border: 0;
@@ -9,8 +16,9 @@ $fontFamily: 'Arial', sans-serif;
   outline: 0;
   font-weight: inherit;
   font-style: inherit;
-  font-family: inherit;
+  font-family: delicious, sans-serif;
   font-size: 100%;
+  letter-spacing: 2px;
   vertical-align: baseline;
   box-sizing: border-box;
 
@@ -73,9 +81,9 @@ a {
     border: none;
   }
 
-  color: #fb270d;
-  text-decoration: none;
-  border-bottom: 1px solid #fb270d;
+  //color: #fb270d;
+  //text-decoration: none;
+  //border-bottom: 1px solid #fb270d;
 }
 
 header {
@@ -86,15 +94,15 @@ header {
   }
 }
 
-a:hover {
-  color: #FFFFFF;
-  background-color: #fb270d;
-  border-radius: 10px;
-}
+//a:hover {
+//  color: #FFFFFF;
+//  background-color: #fb270d;
+//  border-radius: 10px;
+//}
 
 header {
   .brand a:hover, ul.nav li a:hover, button.mobile-toggle:hover {
-    color: #FFFFFF;
+    color: #fff;
     background-color: #fb270d;
     border-radius: 10px;
   }
@@ -102,7 +110,7 @@ header {
 
 header {
   ul.nav li a {
-    color: #FFFFFF;
+    color: #fff;
     text-decoration: none;
     border-bottom: none;
     font-size: 1.2em;
@@ -110,10 +118,10 @@ header {
     height: 100%;
     line-height: 48px;
     &:hover, &.active {
-      color: #FFFFFF;
+      color: #fff;
       background-color: transparent;
       border-radius: 0;
-      border-bottom: 5px solid #FFFFFF;
+      border-bottom: 5px solid #fff;
     }
   }
   .brand a, button.mobile-toggle {
@@ -150,7 +158,7 @@ header {
   position: relative;
   margin-bottom: 1.5em;
   background-color: #fc523d;
-  color: #FFFFFF;
+  color: #fff;
   box-shadow: 0 7px 26px -1px rgba(#000000, 0.53);
   width: 100%;
   height: 64px;
@@ -208,7 +216,7 @@ header {
     top: 12px;
     padding: 0.2em;
     cursor: pointer;
-    color: #FFFFFF;
+    color: #fff;
     font-size: 2em;
     outline: none;
     i {
@@ -224,7 +232,7 @@ header {
 
 .small-logo {
   display: block;
-  background: #FFFFFF url(/img/logo_100x150.png) center center no-repeat;
+  background: #fff url(/img/logo_100x150.png) center center no-repeat;
   background-size: auto 100%;
 }
 
@@ -327,7 +335,7 @@ i {
       right: 0;
       display: block;
       opacity: 0;
-      filter: alpha(opacity = 0);
+      filter: alpha(opacity=0);
       pointer-events: none;
       transition: all 0.3s linear;
       width: 150px;
