--- a/src/shared/components/Grid/ConsultingCard/ConsultingCard.scss
+++ b/src/shared/components/Grid/ConsultingCard/ConsultingCard.scss
@@ -13,41 +13,22 @@
 
   a {
     cursor: pointer;
-    transition: all .4s ease-in-out;
+    transition: all 0.4s;
+    transition-delay: 0s;
   }
 
   img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    transition: all 0.4s ease-in-out;
+    @extend %cardImage;
   }
 
   h2 {
-    text-transform: uppercase;
-    text-align: center;
-    position: relative;
-    font-size: 22px;
-    padding: 10px;
-    background: rgba(0, 0, 0, 0.6);
-    transform: scale(0.7);
-    transition: all 0.4s ease-in-out;
-    opacity: 0;
-    filter: alpha(opacity=0);
-    color: #fff;
+    @extend %cardHeader;
+    transform: translate3d(0, 40px, 0) scale(0.7);
   }
 
   .coco {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    overflow: hidden;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @extend %cardOverlay;
+    transition: all .4s ease-in-out;
   }
 
   &:hover {
@@ -63,7 +44,11 @@
     h2, a.cardLink {
       opacity: 1;
       filter: alpha(opacity=100);
-      transform: translatey(0);
+      transform: translate3d(0, 0, 0);
+    }
+
+    a.cardLink {
+      transition-delay: 0.3s;
     }
 
     .cardContent {
