--- a/src/shared/components/Grid/SkillsCard/SkillsCard.scss
+++ b/src/shared/components/Grid/SkillsCard/SkillsCard.scss
@@ -4,27 +4,21 @@
   @extend %card;
 
   img {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    transition: all .3s linear;
+    @extend %cardImage;
+  }
+
+  a {
+    transition: all 0.4s;
+    transition-delay: 0s;
   }
 
   h2 {
-    text-transform: uppercase;
-    color: #fff;
-    text-align: center;
-    position: relative;
-    font-size: 22px;
-    background: rgba(0, 0, 0, 0.8);
-    transform: translatey(-100px);
-    transition: all .3s ease-in-out;
-    padding: 10px;
+    @extend %cardHeader;
+    transform: translate3d(0, -100px, 0);
   }
 
   .sco {
+    @extend %cardOverlay;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -52,13 +46,17 @@
     h2, a.cardLink {
       opacity: 1;
       filter: alpha(opacity=100);
-      transform: translatey(0);
+      transform: translate3d(0, 0, 0);
+    }
+
+    a.cardLink {
+      transition-delay: 0.3s;
     }
   }
 
   .scDetailRow {
     text-align: center;
-    color: #fff;
+    color: $white;
     margin-top: 5%;
     width: 80%;
     letter-spacing: 2px;
