--- a/src/shared/components/Grid/_common.scss
+++ b/src/shared/components/Grid/_common.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors';
+
 %card {
   width: 100%;
   height: 100%;
@@ -12,8 +14,8 @@ a.cardLink {
   text-decoration: none;
   display: inline-block;
   text-transform: uppercase;
-  color: #fff;
-  border: 1px solid #fff;
+  color: $white;
+  border: 1px solid $white;
   background-color: transparent;
   opacity: 0;
   filter: alpha(opacity=0);
@@ -23,13 +25,50 @@ a.cardLink {
   transition-delay: .3s;
 
   &:hover {
-    box-shadow: 0 0 15px #fff;
+    box-shadow: 0 0 15px $white;
     transition-delay: 0s !important;
     cursor: pointer;
   }
 }
 
+%cardHeader {
+  text-transform: uppercase;
+  color: $white;
+  text-shadow: 0 0 2px $white;
+  text-align: center;
+  position: relative;
+  font-size: 22px;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  padding: 0.6em 0.4em 0.4em;
+  font-weight: 700;
+  transition: all 0.3s ease-in-out;
+}
+
+%cardImage {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transition: all 0.4s ease-in-out;
+}
+
 .cardContent {
   margin-top: 1em;
-  color: #FFF;
+  color: $white;
+}
+
+%cardOverlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 0;
+  left: 0;
+  //opacity: 0;
+  //background-color: rgba(0, 0, 0, 0.6);
+  //transition: all .4s ease-in-out;
 }
