--- a/src/shared/components/Grid/SkillsCard/SkillsCard.scss
+++ b/src/shared/components/Grid/SkillsCard/SkillsCard.scss
@@ -10,6 +10,7 @@
   a {
     transition: all 0.4s;
     transition-delay: 0s;
+    text-shadow: 0 0 2px #fff;
   }
 
   h2 {
@@ -19,28 +20,11 @@
 
   .sco {
     @extend %cardOverlay;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    background-color: rgba(0, 0, 0, 0.6);
-    transition: all .4s ease-in-out;
   }
 
   &:hover {
     img {
       transform: scale(1.3);
-    }
-
-    .sco {
-      opacity: 1;
-      filter: alpha(opacity=100);
     }
 
     h2, a.cardLink {
@@ -57,6 +41,7 @@
   .scDetailRow {
     text-align: center;
     color: $white;
+    text-shadow: 0 0 2px #fff;
     margin-top: 5%;
     width: 80%;
     letter-spacing: 2px;
