--- a/src/shared/components/Grid/ContactCard/ContactCard.scss
+++ b/src/shared/components/Grid/ContactCard/ContactCard.scss
@@ -169,15 +169,17 @@
       &:after {
         @extend %iconHoverClass;
         top: 15%;
-        left: 0;
+        left: 8%;
         width: 80%;
-        height: 60%;
-        background-color: #4267b2;
+        height: 70%;
+        background-color: #0077B5;
       }
     }
   }
 
   .ccSet2 a:first-child {
+    transform: translate3d(-5px, 0, 0);
+
     i {
       font-size: 24px;
 
@@ -187,14 +189,13 @@
 
         &:after {
           opacity: 1;
-          left: 4%;
         }
       }
 
       &:after {
         @extend %iconHoverClass;
         top: 10%;
-        left: 30%;
+        left: 4%;
         width: 100%;
         height: 80%;
         max-width: 40px;
